# thejungle-programs

./: .gitignore  Anchor.toml  README.md  config.json  deployment.json  deployments.json  mainnet.config.json  package.json  tsconfig.json
assets/: devnetMints.json  mainnetMint.json  mainnetMints.json
migrations/: deploy.ts
programs/jungle/: Cargo.toml
programs/jungle/src/: errors.rs  lib.rs  merkle_proof.rs
programs/jungle/src/instructions/: claim_staking.rs  init_jungle.rs  mod.rs  set_jungle.rs  stake_animal.rs  unstake_animal.rs  withdraw_rewards.rs
programs/lottery/: Cargo.toml
programs/lottery/src/: errors.rs  lib.rs
programs/lottery/src/instructions/: claim_participation.rs  init_lottery.rs  mod.rs  new_lottery_round.rs  participate.rs  set_lottery.rs  update_participation.rs
scripts/: initialize.ts  reset.ts  transferPot.ts  transferRewards.ts
tests/: jungle.ts  lottery.ts
tests/helpers/: index.ts  merkleTree.ts
tests/suites/: claimParticipation.ts  claimRewards.ts  initJungle.ts  initLottery.ts  newLotteryRound.ts  participate.ts  setJungle.ts  setLottery.ts  stakeAnimal.ts  unstakeAnimal.ts  updateParticipation.ts  withdrawRewards.ts
