[package]
name = "jungle"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "jungle"

[features]
no-entrypoint = []
no-idl = []
devnet = ["anchor-spl/devnet"]
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.9.2"
anchor-lang = "0.19.0"
anchor-spl = "0.19.0"
thiserror = "1.0.30"
pyth-client = "0.2.2"